--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -9,7 +9,7 @@
 <body>
 	<nav class="navbar sticky-top" style="z-index: 100;">
 		<div class="container-fluid no-responsive">
-			<a class="navbar-brand" href="../flotes">
+			<a class="navbar-brand" href="/home/flotes">
 				<img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
 					class="d-inline-block align-text-top">
 			</a>
