--- a/backServer/vistas/html/add_maintenance.html
+++ b/backServer/vistas/html/add_maintenance.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar sticky-top">
         <div class="container-fluid no-responsive">
-            <a class="navbar-brand" href="../flotes">
+            <a class="navbar-brand" href="/home/flotes">
                 <!-- Arreglar ventana emergente que aparece de onda cuando se vuelve al home (tambien pasa desde el history) -->
                 <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
