--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -70,6 +70,7 @@
                         <p><b>{{ repair.milage }}</b></p>
                         <p><b>{{ repair.description }}</b></p>
                         <p><b>{{ repair.cost }}</b></p>
+                        <!-- generar botton para eliminar con referencia a /delete/repair/{{ repair.pk }} -->
                     </div>
                 </div>
             </div>
