--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<!-- Navegador -->
 	<nav class="navbar sticky-top" style="z-index: 100;">
 		<div class="container-fluid no-responsive">
 			<a class="navbar-brand" href="/home/flotes">
@@ -86,6 +87,7 @@
 		</div>
 	</nav>
 
+	<!-- Encabezado -->
 	<header class="header">
 		<div class="wave" style="height: 150px; overflow: hidden;">
 			<svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
@@ -96,6 +98,7 @@
 		</div>
 	</header>
 
+	<!-- Flotas -->
 	<section class="flotes">
 		<h2 class="titulo text-center fw-bold">FLOTAS</h2>
 		<div class="container-fluid text-center mt-5 mb-3 prueba" style="width: 90vw;">
