--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <!-- Navegador -->
     <nav class="navbar sticky-top">
         <div class="container-fluid no-responsive">
             <a class="navbar-brand" href="/home/flotes">
@@ -59,11 +60,23 @@
             </div>
         </div>
     </nav>
+
+    <!-- Historial de la flota -->
     {% for repair in list%}
     <div class="container">
         <div class="d-flex justify-content-center mt-3 mb-3">
             <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-8 col-xxl-8 mt-3 mb-3">
-                <div class="card h-100">
+                <div class="card">
+                    <div class="text-end">
+                        <script> 
+                            //Cuadro de diálogo de confirmación en JavaScript
+                            function confirmarAccesoURL()
+                            {
+                        return confirm("¿Está seguro que lo desea eliminar?");
+                            }
+                        </script>
+                        <a href="/delete/repair/{{ repair.pk }}" onclick="return confirmarAccesoURL()" class="btn btn-outline-dark btn-lg"> <i class="fa-sharp fa-solid fa-xmark"></i></a>
+                    </div>
                     <div class="card-body">
                         <p><b>{{ repair.type }}</b></p>
                         <p><b>{{ repair.date }}</b></p>
