--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -84,7 +84,7 @@
                                 <div hidden class="imagen-flota">
                                     <img src="{{ img.url }}" class="card-img-top" alt="Imagen de la flota">
                                     <a href="/delete/img/{{ img.pk }}" onclick="return confirmarDelete()"
-                                        class="btn btn-outline-dark btn fw-semibold mt-2 type="button">
+                                        class="btn btn-outline-dark btn fw-semibold mt-2" type="button">
                                         Eliminar imagen
                                     </a>
                                 </div>
@@ -105,7 +105,6 @@
                     <div class="card-body container text-center" style="width: 100%;">
                         <div class="card-title">
                             <h5 class="text-center">{{flote.type}}</h5>
-
                             {% if correct_group %}
                             <div id="container" class="Default btn-group text-end" role="group"
                                 aria-label="Basic outlined example">
@@ -113,7 +112,7 @@
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </button>
                                 <button type="submit" form="myform" id="end-editing"
-                                    class="btn btn-outline-dark btn-sm">
+                                    class="btn btn-outline-dark btn-sm finalizar" disabled>
                                     <i class="fa-solid fa-check"></i>
                                 </button>
                                 <script>
@@ -163,7 +162,7 @@
                             const prev_button = document.getElementById("prev")
                             const next_button = document.getElementById("next")
                             const images_div = document.getElementById("images")
-                            const form_elements = document.querySelectorAll('.form-control, .form-select')
+                            const form_elements = document.querySelectorAll('.form-control, .form-select, .finalizar')
                             var childrens = Array.from(images_div.childNodes);
                             childrens = childrens.filter(child => child.tagName == "DIV")
                             childrens[0].hidden = false
